# tttc_practice

plugins/lab2/src/: CMakeLists.txt  plugin.cpp
plugins/lab2/test/: test.cpp  utils.cpp
plugins/src/: CMakeLists.txt  ImplicitCastsCounter.cpp
plugins/tests/: test.cpp
